greeter/manifests/deployment-v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: greeter-dep-v1
  namespace: exercises
spec:
  replicas: 1
  selector:
    matchLabels:
      app: greeter
      version: v1
  template:
    metadata:
      labels:
        app: greeter
        version: v1
    spec:
      containers:
        - name: greeter
          image: greeter-image
