greeter/manifests/deployment-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: greeter-dep-v2
  namespace: exercises
spec:
  replicas: 1
  selector:
    matchLabels:
      app: greeter
      version: v2
  template:
    metadata:
      labels:
        app: greeter
        version: v2
    spec:
      containers:
        - name: greeter
          image: greeter-image
