greeter/manifests/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: greeter-route
  namespace: exercises
spec:
  parentRefs:
    - name: greeter-svc
      kind: Service
      group: ""
  rules:
    - backendRefs:
        - name: greeter-svc-v1
          port: 2345
          weight: 75
        - name: greeter-svc-v2
          port: 2345
          weight: 25
